--- a/reference/ticketpass-api.v1.yaml
+++ b/reference/ticketpass-api.v1.yaml
@@ -4,7 +4,7 @@ info:
   version: '1.0'
   description: ''
 servers:
-  - url: 'http://ticketpass.puroong.me'
+  - url: 'http://localhost:8000'
 paths:
   /v1/auth/sign-up:
     post:
