--- a/reference/ticketpass-api.v1.yaml
+++ b/reference/ticketpass-api.v1.yaml
@@ -394,7 +394,7 @@ paths:
           name: Authorization
           required: true
           description: Bearer dsfjlaksdfjk...
-  '/v1/concerts/{concertId}/sync-tickets':
+  '/v1/sheet/{spreadsheetId}/sync':
     post:
       summary: 공연 티켓 동기화
       operationId: post-v1-concerts-sync
@@ -474,10 +474,10 @@ paths:
     parameters:
       - schema:
           type: string
-        name: concertId
+        name: spreadsheetId
         in: path
         required: true
-        description: 공연 PK
+        description: 스프레드시트 id
   '/v1/users/{userId}/tickets':
     parameters:
       - schema:
@@ -765,7 +765,7 @@ paths:
               properties:
                 qrData:
                   type: string
-                  description: "QR 코드 데이터 (암호화 된 것)\n\n아래 값을 AES256으로 암호화함\n사용자 ID + 공백 + 티켓 ID \n\nsecret key는 kik2fkas9ls1t7vrv72mb로 사용함"
+                  description: "\nQR 코드 데이터 (암호화 된 것)\n\n아래 값을 AES256으로 암호화함\n사용자 ID + 공백 + 티켓 ID \n\nsecret key는 kik2fkas9ls1t7vrv72mb로 사용함"
               required:
                 - qrData
             examples:
@@ -1159,4 +1159,8 @@ components:
         - userName
         - userPhoneNumber
       description: ''
-  securitySchemes: {}
+  securitySchemes:
+    Authorization:
+      type: http
+      scheme: bearer
+      description: jwt access token
